crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F404_F404_0.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F404 `from __future__` imports must occur at the beginning of the file
 --> F404_0.py:6:1
  |
4 | from collections import namedtuple
5 |
6 | from __future__ import print_function
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 |
8 | import __future__
