crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F404_F404_1.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F404 `from __future__` imports must occur at the beginning of the file
 --> F404_1.py:5:1
3 | """Non-docstring"""
4 |
5 | from __future__ import absolute_import
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
