crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F405_F405.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F405 `name` may be undefined, or defined from star imports
 --> F405.py:5:11
  |
4 | def print_name():
5 |     print(name)
  |           ^^^^

F405 `a` may be undefined, or defined from star imports
  --> F405.py:11:12
 9 |     print(name)
10 |
11 | __all__ = ['a']
   |            ^^^
