crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F406_F406.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F406 `from F634 import *` only allowed at module level
 --> F406.py:5:5
  |
4 | def f():
5 |     from F634 import *
  |     ^^^^^^^^^^^^^^^^^^

F406 `from F634 import *` only allowed at module level
 --> F406.py:9:5
8 | class F:
9 |     from F634 import *
  |     ^^^^^^^^^^^^^^^^^^
