crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F502_F502.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F502 `%`-format string expected mapping but got sequence
 --> F502.py:6:1
  |
4 | "%(bob)s" % {"bob": "bob"}
5 | "%(bob)s" % {**{"bob": "bob"}}
6 | "%(bob)s" % ["bob"]  # F202
  | ^^^^^^^^^^^^^^^^^^^
7 | "%(bob)s" % ("bob",)  # F202
8 | "%(bob)s" % {"bob"}  # F202

F502 `%`-format string expected mapping but got sequence
 --> F502.py:7:1
  |
5 | "%(bob)s" % {**{"bob": "bob"}}
6 | "%(bob)s" % ["bob"]  # F202
7 | "%(bob)s" % ("bob",)  # F202
  | ^^^^^^^^^^^^^^^^^^^^
8 | "%(bob)s" % {"bob"}  # F202
9 | "%(bob)s" % [*["bob"]]  # F202
  |

F502 `%`-format string expected mapping but got sequence
  --> F502.py:8:1
 6 | "%(bob)s" % ["bob"]  # F202
 7 | "%(bob)s" % ("bob",)  # F202
 8 | "%(bob)s" % {"bob"}  # F202
   | ^^^^^^^^^^^^^^^^^^^
 9 | "%(bob)s" % [*["bob"]]  # F202
10 | "%(bob)s" % {"bob": "bob" for _ in range(1)}

F502 `%`-format string expected mapping but got sequence
  --> F502.py:9:1
 7 | "%(bob)s" % ("bob",)  # F202
 8 | "%(bob)s" % {"bob"}  # F202
 9 | "%(bob)s" % [*["bob"]]  # F202
   | ^^^^^^^^^^^^^^^^^^^^^^
10 | "%(bob)s" % {"bob": "bob" for _ in range(1)}
11 | "%(bob)s" % ["bob" for _ in range(1)]  # F202

F502 `%`-format string expected mapping but got sequence
  --> F502.py:11:1
 9 | "%(bob)s" % [*["bob"]]  # F202
10 | "%(bob)s" % {"bob": "bob" for _ in range(1)}
11 | "%(bob)s" % ["bob" for _ in range(1)]  # F202
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | "%(bob)s" % ("bob" for _ in range(1))  # F202
13 | "%(bob)s" % {"bob" for _ in range(1)}  # F202

F502 `%`-format string expected mapping but got sequence
  --> F502.py:12:1
   |
10 | "%(bob)s" % {"bob": "bob" for _ in range(1)}
11 | "%(bob)s" % ["bob" for _ in range(1)]  # F202
12 | "%(bob)s" % ("bob" for _ in range(1))  # F202
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | "%(bob)s" % {"bob" for _ in range(1)}  # F202

F502 `%`-format string expected mapping but got sequence
  --> F502.py:13:1
   |
11 | "%(bob)s" % ["bob" for _ in range(1)]  # F202
12 | "%(bob)s" % ("bob" for _ in range(1))  # F202
13 | "%(bob)s" % {"bob" for _ in range(1)}  # F202
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
