crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F502_F50x.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F502 `%`-format string expected mapping but got sequence
  --> F50x.py:9:1
 7 | '%(bar)s' % {}  # F505
 8 | '%(bar)s' % {'bar': 1, 'baz': 2}  # F504
 9 | '%(bar)s' % (1, 2, 3)  # F502
   | ^^^^^^^^^^^^^^^^^^^^^
10 | '%s %s' % {'k': 'v'}  # F503
11 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
