crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F503_F503.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F503 `%`-format string expected sequence but got mapping
  --> F503.py:17:1
   |
15 | # Multiple placeholders
16 | "%s %s" % dog
17 | "%s %s" % {"bob": "bob"}  # F503
   | ^^^^^^^^^^^^^^^^^^^^^^^^
18 | "%s %s" % {**{"bob": "bob"}}  # F503
19 | "%s %s" % ["bob"]

F503 `%`-format string expected sequence but got mapping
  --> F503.py:18:1
   |
16 | "%s %s" % dog
17 | "%s %s" % {"bob": "bob"}  # F503
18 | "%s %s" % {**{"bob": "bob"}}  # F503
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 | "%s %s" % ["bob"]
20 | "%s %s" % ("bob",)

F503 `%`-format string expected sequence but got mapping
  --> F503.py:23:1
   |
21 | "%s %s" % {"bob"}
22 | "%s %s" % [*["bob"]]
23 | "%s %s" % {"bob": "bob" for _ in range(1)}  # F503
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 | "%s %s" % ["bob" for _ in range(1)]
25 | "%s %s" % ("bob" for _ in range(1))
